output/illustrative_examples/additional2_TJ/explanation_from_other_techniques/explanation_PEM_2.7.txt
line 9
    result = input("Xxx xxxxx Xxxx"..num)
                                    ^
SyntaxError: invalid syntax